git ignore ignore large files

--- a/lab7/.gitignore
+++ b/lab7/.gitignore
@@ -1,7 +1,7 @@
-./DNA_Protein_comp
-./gp120_data 
-./old_tests 
-./zeros_comp 
+./DNA_Protein_comp/*
+./gp120_data/*
+./old_tests/*
+./zeros_comp/*
 *.fasta
 *.gz
 *.art
